# VoidPtrFun

./: .gitignore  CMakeLists.txt  README.md
NASM/: CMakeLists.txt  VPF.asm  VPF.cpp
include/: VoidPtrFun.h
source/: CMakeLists.txt  main.c
